--- a/portfolio.html
+++ b/portfolio.html
@@ -8,58 +8,58 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-<body>
+<body class="page-body">
     <header class="page-header">
-        <nav class="page-menu">
-            <a href="./index.html" class="page-logo link">Web<span class="page-logo-span">Studio</span></a>
-          <ul class="menu-list list">
-            <li class="menu-list-item">
-              <a href="">Studio</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="social-media">
-        <ul class="social-list list">
-          <li class="social-list-item">
-            <a
-              href="mailto:info@devstudio.com"
-              aria-label="instagram"
-              target="_blank"
-              rel="noopener noreferrer"
-              
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="social-list-item">
-            <a
-              href="tel:+110001111111"
-              aria-label="twitter"
-              target="_blank"
-              rel="noopener noreferrer"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-      </header>
+        <a href="./index.html" class="page-logo link">Web<span class="page-logo-span">Studio</span></a>
+       <nav class="page-menu">  
+         <ul class="menu-list list">
+           <li class="menu-list-item">
+             <a href="" class="menu-list-link">Studio</a>
+           </li>
+           <li class="menu-list-item">
+             <a href="./portfolio.html" class="menu-list-link">Portfolio</a>
+           </li>
+           <li class="menu-list-item">
+             <a href="" class="menu-list-link">Contacts</a>
+           </li>
+         </ul>
+       </nav>
+       <address class="social-media">
+       <ul class="social-list list">
+         <li class="social-list-item">
+           <a
+             href="mailto:info@devstudio.com"
+             aria-label="instagram"
+             target="_blank"
+             rel="noopener noreferrer"
+              class="social-link link"
+             >info@devstudio.com</a
+           >
+         </li>
+         <li class="social-list-item">
+           <a
+             href="tel:+110001111111"
+             aria-label="twitter"
+             target="_blank"
+             rel="noopener noreferrer" class="social-link link"
+             >+11 (000) 111-11-11</a
+           >
+         </li>
+       </ul>
+     </address>
+     </header>
  <main>
     <section class="portfolio">
         <h1></h1>
         <ul class="btn-list list">
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+            <li><button type="button" class="portfolio-btn">All</button></li>
+            <li><button type="button" class="portfolio-btn">Web Site</button></li>
+            <li><button type="button" class="portfolio-btn">App</button></li>
+            <li><button type="button" class="portfolio-btn">Design</button></li>
+            <li><button type="button" class="portfolio-btn">Marketing</button></li>
         </ul>
         <ul class="portfolio-items-list list">
             <li class="portfolio-item">
@@ -111,7 +111,7 @@
     </section>
  </main>  
  <footer id="footer" class="footer">
-    <a href="./index.html" class="page-logo">WebStudio</a>
+    <a href="./index.html" class="page-logo">Web<span class="page-footer-span">Studio</span></a>
   <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  
  
