--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <a href="./index.html" class="page-logo link">Web<span class="page-logo-span">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-list-item">
-            <a href="" class="menu-list-link">Studio</a>
+            <a href="" class="menu-list-link link">Studio</a>
           </li>
           <li class="menu-list-item">
-            <a href="./portfolio.html" class="menu-list-link">Portfolio</a>
+            <a href="./portfolio.html" class="menu-list-link link">Portfolio</a>
           </li>
           <li class="menu-list-item">
-            <a href="" class="menu-list-link">Contacts</a>
+            <a href="" class="menu-list-link link">Contacts</a>
           </li>
         </ul>
       </nav>
