--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <a href="./index.html" class="page-logo link">Web<span class="page-logo-span">Studio</span></a>
          <ul class="menu-list list">
            <li class="menu-list-item">
-             <a href="" class="menu-list-link">Studio</a>
+             <a href="./index.html" class="menu-list-link">Studio</a>
            </li>
            <li class="menu-list-item">
              <a href="./portfolio.html" class="menu-list-link">Portfolio</a>
