--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </section>
     </main>
     <footer id="footer" class="footer">
-        <a href="./index.html" class="page-logo">Web<span class="page-footer-span">Studio</span></a>
+        <a href="./index.html" class="page-logo link">Web<span class="page-footer-span">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
      
      
