--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="./index.html" class="page-logo link">Web<span class="page-logo-span">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-list-item">
-            <a href="" class="menu-list-link link">Studio</a>
+            <a href="./index.html" class="menu-list-link link">Studio</a>
           </li>
           <li class="menu-list-item">
             <a href="./portfolio.html" class="menu-list-link link">Portfolio</a>
