--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
      </header>
  <main>
     <section class="portfolio">
-        <h1></h1>
+        <h1>Portfolio</h1>
         <ul class="btn-list list">
             <li><button type="button" class="portfolio-btn">All</button></li>
             <li><button type="button" class="portfolio-btn">Web Site</button></li>
@@ -64,50 +64,59 @@
         </ul>
         <ul class="portfolio-items-list list">
             <li class="portfolio-item">
-                <img src="./portfolioimg/img.jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                           
+                <img src="./portfolioimg/img.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
                 <p class="portfolio-text">App</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (1).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (1).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Cashless Payment</h2>
                 <p class="portfolio-text">Marketing</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (2).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (2).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Meditation App</h2>
                 <p class="portfolio-text">App</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (3).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (3).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Taxi Service</h2>
                 <p class="portfolio-text">Marketing</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (4).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (4).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Screen Illustrations</h2>
                 <p class="portfolio-text">Design</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (5).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (5).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Online Courses</h2>
                 <p class="portfolio-text">Marketing</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (6).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (6).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Instagram Story Concept</h2>
                 <p class="portfolio-text">Design</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (7).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                        
+                <img src="./portfolioimg/img (7).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Organic Food</h2>
                 <p class="portfolio-text">Web Site</p>
-            </li>
+            </a></li>
             <li class="portfolio-item">
-                <img src="./portfolioimg/img (8).jpg" alt="" width="360">
+<a href="" class="portfolio-link link">                            
+                <img src="./portfolioimg/img (8).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Fresh Coffee</h2>
                 <p class="portfolio-text">Web Site</p>
-            </li>
+            </a></li>
         </ul>
     </section>
  </main>  
