--- a/portfolio.html
+++ b/portfolio.html
@@ -65,55 +65,55 @@
         <ul class="portfolio-items-list list">
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                           
-                <img src="./portfolioimg/img.jpg" alt="img" width="360">
+                <img src="./images/img.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
                 <p class="portfolio-text">App</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (1).jpg" alt="img" width="360">
+                <img src="./images/img (1).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Cashless Payment</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (2).jpg" alt="img" width="360">
+                <img src="./images/img (2).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Meditation App</h2>
                 <p class="portfolio-text">App</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (3).jpg" alt="img" width="360">
+                <img src="./images/img (3).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Taxi Service</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (4).jpg" alt="img" width="360">
+                <img src="./images/img (4).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Screen Illustrations</h2>
                 <p class="portfolio-text">Design</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (5).jpg" alt="img" width="360">
+                <img src="./images/img (5).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Online Courses</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (6).jpg" alt="img" width="360">
+                <img src="./images/img (6).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Instagram Story Concept</h2>
                 <p class="portfolio-text">Design</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./portfolioimg/img (7).jpg" alt="img" width="360">
+                <img src="./images/img (7).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Organic Food</h2>
                 <p class="portfolio-text">Web Site</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                            
-                <img src="./portfolioimg/img (8).jpg" alt="img" width="360">
+                <img src="./images/img (8).jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Fresh Coffee</h2>
                 <p class="portfolio-text">Web Site</p>
             </a></li>
@@ -121,7 +121,7 @@
     </section>
  </main>  
  <footer id="footer" class="footer">
-    <a href="./index.html" class="page-logo">Web<span class="page-footer-span">Studio</span></a>
+    <a href="./index.html" class="page-logo link">Web<span class="page-footer-span">Studio</span></a>
   <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  
  
