--- a/portfolio.html
+++ b/portfolio.html
@@ -71,49 +71,49 @@
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (1).jpg" alt="img" width="360">
+                <img src="./images/img1.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Cashless Payment</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (2).jpg" alt="img" width="360">
+                <img src="./images/img2.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Meditation App</h2>
                 <p class="portfolio-text">App</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (3).jpg" alt="img" width="360">
+                <img src="./images/img3.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Taxi Service</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (4).jpg" alt="img" width="360">
+                <img src="./images/img4.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Screen Illustrations</h2>
                 <p class="portfolio-text">Design</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (5).jpg" alt="img" width="360">
+                <img src="./images/img5.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Online Courses</h2>
                 <p class="portfolio-text">Marketing</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (6).jpg" alt="img" width="360">
+                <img src="./images/img6.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Instagram Story Concept</h2>
                 <p class="portfolio-text">Design</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
-                <img src="./images/img (7).jpg" alt="img" width="360">
+                <img src="./images/img7.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Organic Food</h2>
                 <p class="portfolio-text">Web Site</p>
             </a></li>
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                            
-                <img src="./images/img (8).jpg" alt="img" width="360">
+                <img src="./images/img8.jpg" alt="img" width="360">
                 <h2 class="portfolio-list-title">Fresh Coffee</h2>
                 <p class="portfolio-text">Web Site</p>
             </a></li>
