--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
             <li class="portfolio-item">
 <a href="" class="portfolio-link link">                        
                 <img src="./images/img6.jpg" alt="img" width="360">
-                <h2 class="portfolio-list-title">Instagram Story Concept</h2>
+                <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
                 <p class="portfolio-text">Design</p>
             </a></li>
             <li class="portfolio-item">
